# x64dbg_cpp_template

./: CMakeLists.txt  README.md
include/: plugin.h  pluginmain.h
src/: plugin.cpp  pluginmain.cpp
